[MS7] version presentée a SIRIS

--- a/doc/conferences/201605_MS7/presentation.tex
+++ b/doc/conferences/201605_MS7/presentation.tex
@@ -397,15 +397,15 @@ Succession of events $\rightarrow$ Actual Biology?
 	    \begin{columns}
 		\begin{column}{.4\textwidth}
 		    \begin{center}
-			\includegraphics[height=6cm]{images/marketTemin.jpg}\\
-			Integrate Market
+			\includegraphics[height=6cm]{images/bazaarBang.jpg}\\
+			Independent Markets
 
 		    \end{center}
 		\end{column}
 		\begin{column}{.4\textwidth}
 		    \begin{center}
-			\includegraphics[height=6cm]{images/bazaarBang.jpg}\\
-			Independent Markets
+			\includegraphics[height=6cm]{images/marketTemin.jpg}\\
+			Integrate Market
 
 		    \end{center}
 		\end{column}
@@ -432,7 +432,7 @@ Succession of events $\rightarrow$ Actual Biology?
 	Result:\\
 	\begin{center}
 
-	    \only<1>{		    \includegraphics[height=6cm]{images/looselyMarket.png}\\ Roman Bazaar}
+	    \only<1>{		    \includegraphics[height=6cm]{images/looselyMarket.png}\\ Independant Market}
 	    \only<2>{		    \includegraphics[height=6cm]{images/highMarket.png}\\ Integrated Market}
 	\end{center}
 
@@ -440,32 +440,34 @@ Succession of events $\rightarrow$ Actual Biology?
 
 
 \begin{frame}{Hypothesis Generation}
-    Cultural transmission of manufacturings techniques:
+\end{frame}
+
+
+
+\begin{frame}{Cultural Transmission}
+    \begin{columns}
+	\begin{column}{.6\textwidth}
+	    \includegraphics[width=.9\textwidth]{images/Beti.png}
+	\end{column}
+	\begin{column}{.3\textwidth}
+	     \includegraphics<2->[width=.9\textwidth]{images/mesures.png}
+	\end{column}
+    \end{columns}
+
+    \uncover<3->{
+	Cultural transmission of manufacturings techniques:
     \begin{itemize}
 	\item Few Data
 	\item Few Hypothesis 
     \end{itemize}
+}
 \end{frame}
-
 
 
 \begin{frame}{Hypothesis Generation}
-    \includegraphics[height=6cm]{images/Beti.png}
-\end{frame}
-
-\begin{frame}{hypothesis generation}
-\includegraphics[height=6cm]{images/mesures.png}
-    
-\end{frame}
-
-\begin{frame}{hypothesis generation}
 	\includegraphics[height=6cm]{images/pca.png}
 \end{frame}
 
-\begin{frame}{hypothesis generation}
-	\includegraphics[height=6cm]{images/mesures.png}
-    
-\end{frame}
 
 \begin{frame}{Hypothesis Generation}
     
@@ -595,18 +597,20 @@ Succession of events $\rightarrow$ Actual Biology?
 \end{frame}
 
 \begin{frame}{Hypothesis Generation}
-    Conceptual Model (Barandian 2006) used as Opaque thought experiement (Di Paolo 2000):\\
-    \vfill
+    
+    Explore hypothetics situation, generate and compare hopthesis :\\
+    \hspace{.5cm}Conceptual Model (Barandian 2006) as Opaque thought experiement (Di Paolo 2000).
+
+\end{frame}
+
+\begin{frame}{Model in History}
     \begin{itemize}
-	\item <2-> Thought Experiment:\\
-	    \uncover<3->{\small \hspace{.5cm} Higher degree of freedom than experimental methods ()}
-	    \vfill
-	\item <4-> Experiment: \\
-	    \uncover<5->{\small \hspace{.5cm} Higher degree of de-idealization than theory or though experiments}
-	    \vfill
-	\item <6-> Opacity: \\
-	    \uncover<7->{\small \hspace{.5cm}  Need to be ``experimentally'' explored}
+	\item Not exhaustive list
+	\item Not fixed status
+	\item Help at different level
+
     \end{itemize}
+    
 
 \end{frame}
 
