[MS7] version presentée a SIRIS

--- a/doc/conferences/201605_MS7/presentation.tex
+++ b/doc/conferences/201605_MS7/presentation.tex
@@ -598,16 +598,24 @@ Succession of events $\rightarrow$ Actual Biology?
 
 \begin{frame}{Hypothesis Generation}
     
-    Explore hypothetics situation, generate and compare hopthesis :\\
+    Explore hypothetics situation, generate and compare hypothesis :\\
+    \vfill
     \hspace{.5cm}Conceptual Model (Barandian 2006) as Opaque thought experiement (Di Paolo 2000).
+    \vfill
 
 \end{frame}
 
 \begin{frame}{Model in History}
+    Computer Simulations Exemple:
     \begin{itemize}
 	\item Not exhaustive list
 	\item Not fixed status
 	\item Help at different level
+	    \begin{enumerate}
+		\item Statistical Validation
+		\item Qualitative Comparaison
+		\item Hypothesis generation and exploration
+	    \end{enumerate}
 
     \end{itemize}
     
@@ -615,8 +623,9 @@ Succession of events $\rightarrow$ Actual Biology?
 \end{frame}
 
 \begin{frame}{Limitation}
-    Assumptions made at every level, complex interpretation:\\
-    \hfil $\rightarrow$ Need of multi-disciplinarity
+    \begin{center}
+	Assumptions made at every level, very heterogenous data \& knowledge, complex interpretation\dots
+    \end{center}
 %However, building computational simulations that can provide valuable knowledge about the modelled object still remains a difficult task. Computer scientists have to be aware of every assumptions they could implicitly made and domain experts (as historians or biologists) have to formulate their hypotheses in an epistemological framework yet not clearly specified and far from the one they are used. The communication is thus primordial: knowledge here does not lie in the mathematical models neither in the historical data but emerges from the well articulation of both side \cite{winsberg09taletwomethods}.
 \end{frame}
 
