[MS7] presentation as done during the EPNET workshop

--- a/doc/conferences/201605_MS7/presentation.tex
+++ b/doc/conferences/201605_MS7/presentation.tex
@@ -3,7 +3,7 @@
 %% and addapted for the CAA2k16
 %% and then  for the EPNET workshop of the 3rd of may
 %% and then  for the SM7 workshop of the  of may
-\documentclass[12pt, notes=show]{beamer}
+\documentclass[12pt, notes=show,handout=no]{beamer}
 \usetheme[width=0cm]{Goettingen}
 \usecolortheme{rose}
 \useoutertheme{default}
@@ -25,7 +25,7 @@
 
 \definecolor{siris}{HTML}{1C0E66} 
 
-\title{Computer modelling and simulation as heuristic tool to understand the past: the case of the EPNEt project.}
+\title{Computer modelling and simulation as heuristic tool to understand the past: the case of the EPNet project.}
 \author{Simon Carrignon, Alessandro Mosca, Bernardo Rondelli \& José Remesal}
 
 \institute{19 May 2016}
@@ -36,22 +36,23 @@
 	\begin{columns}
 		\begin{column}{.3\textwidth}
 			\begin{center}
-				\includegraphics[height=1cm]{images/bscLogo.jpg} 
+				\includegraphics[height=1cm]{images/bscLogo.jpg} \\
+			\includegraphics[height=1cm]{images/UB_logo.png}
 			\end{center}
 		\end{column}
 
 		\begin{column}{.3\textwidth}
 		    \begin{center}
-			\includegraphics[height=1cm]{images/UB_logo.png}\\
+			\includegraphics[height=1.5cm]{images/LOGO-ERC.jpg}
 
-			\colorbox{siris}{\centering
-			    \includegraphics[height=.8cm]{images/siris_logo_menu1.png} }
 			\end{center}
 		\end{column}
 
 		\begin{column}{.3\textwidth}
 			\begin{center}
-				\includegraphics[height=1cm]{images/upfLogo.jpeg}
+				\includegraphics[height=1cm]{images/upfLogo.jpeg}\\
+			\colorbox{siris}{\centering
+			    \includegraphics[height=.8cm]{images/siris_logo_menu1.png} }
 			\end{center}
 		\end{column}
 	\end{columns}
@@ -192,24 +193,25 @@ Succession of events $\rightarrow$ Actual Biology?
 \end{frame}
 
 
-\begin{frame}{History}
+\begin{frame}{History \& Archeology}
 
-    \uncover<2->{Understand succession of events that led to nowadays human societies:}
+    \uncover<2->{Understand the succession of change occurring throughout the past of humanity.}
     \begin{itemize}
 	\item <3-> Highly Path Depend
 	\item <4-> Non absolute value
     \end{itemize}
     
+    Biologie-like. But, yet:
+    \begin{itemize}
+	\item<5-> Hypothesis rarely formalized and quantifiable, 
+	\item<6-> Empirical experimentation less accessible,
+	\item<7-> Higher level of complexity:
+    \end{itemize}
 \end{frame}
 
 \begin{frame}{History}
 %This suggest that (i) the problems encountered by evolutionary biologists are close to those archaeologists and historians have to face (ii) the way inferences are made about the history of living beings and the history of human societies fall into a similar epistemological framework and (iii) mathematical and computer models are good candidates to infer, in a statistically plausible and transparent way, missing data and complex hypotheses in both enterprise.
     Nonetheless:
-    \begin{itemize}
-	\item<2-> Hypothesis rarely formalized and quantifiable, 
-	\item<3-> Empirical experimentation less accessible,
-	\item<4-> Higher level of complexity:
-    \end{itemize}
 \end{frame}
 
 \begin{frame}{History}
@@ -302,6 +304,7 @@ Succession of events $\rightarrow$ Actual Biology?
 \end{frame}
 
 
+\section{Computer sim to do model selection}
 
 \begin{frame}{Historical Hypothesis: Quantitative analysis}
     Rubio-Campillo 2015:  Model of War casualties
@@ -364,7 +367,12 @@ Succession of events $\rightarrow$ Actual Biology?
 	\end{enumerate}
 \end{frame}
 
-
+\begin{frame}{Hybrid Status}
+	\begin{center}
+		2.Hybrid model
+	\end{center}
+	
+\end{frame}
 
 \begin{frame}{Formal Description \& Comparison}
     \begin{columns}
@@ -505,7 +513,7 @@ Succession of events $\rightarrow$ Actual Biology?
 
 \end{frame}
 
-\begin{frame}{Result}
+\begin{frame}{Experimental Setup}
     \begin{tabular}{m{5cm}m{5cm}}
 	    %&No Transmission & Transmission \\\hline
 
@@ -596,6 +604,13 @@ Succession of events $\rightarrow$ Actual Biology?
 
 \end{frame}
 
+\begin{frame}{Results}
+
+
+	
+\end{frame}
+
+
 \begin{frame}{Hypothesis Generation}
     
     Explore hypothetics situation, generate and compare hypothesis :\\
@@ -606,7 +621,8 @@ Succession of events $\rightarrow$ Actual Biology?
 \end{frame}
 
 \begin{frame}{Model in History}
-    Computer Simulations Exemple:
+
+    Computer Simulations Example:
     \begin{itemize}
 	\item Not exhaustive list
 	\item Not fixed status
@@ -661,8 +677,8 @@ Succession of events $\rightarrow$ Actual Biology?
     \end{center}
 \end{frame}
 
-\begin{frame}{EPNet Project}
+\begin{frame}
+	Thank you for your attention
 \end{frame}
-
 \end{document}
 
